--- a/Godeps/_workspace/src/github.com/cznic/ql/Makefile
+++ b/Godeps/_workspace/src/github.com/cznic/ql/Makefile
@@ -51,7 +51,10 @@ nuke:
 	go clean -i
 
 parser.go: parser.y
-	goyacc -o $@ $<
+	a=$(shell tempfile) ; \
+	  goyacc -o /dev/null -xegen $$a $< ; \
+	  goyacc -o $@ -xe $$a $< ; \
+	  rm -f $a
 	sed -i -e 's|//line.*||' -e 's/yyEofCode/yyEOFCode/' $@
 
 ql.test: all
